[gd_scene load_steps=3 format=3 uid="uid://m24coaqulwcp"]

[ext_resource type="PackedScene" uid="uid://yeplf5s6wa2n" path="res://scenes/score_entry.tscn" id="1_6sl18"]
<<<<<<< Updated upstream
[ext_resource type="Script" path="res://scripts/scoreboard.gd" id="1_lrco3"]
=======
>>>>>>> Stashed changes

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrco3")

[node name="Score Entry" parent="." instance=ExtResource("1_6sl18")]
p_name = "DOT"
p_score = 49201

[node name="Score Entry2" parent="." instance=ExtResource("1_6sl18")]
position = Vector2(0, 64)
p_score = 2003

[node name="Score Entry3" parent="." instance=ExtResource("1_6sl18")]
position = Vector2(0, 128)
p_name = "BOB"
p_score = 402

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
